# climate-explorer-backend

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Jenkinsfile  Makefile  NEWS.md  Pipfile  README.md  build_gdal.sh  docker_requirements.txt  pyproject.toml  pyproject.toml.tmp  pytest.ini  requirements.txt  setup.cfg  setup.py  streamflow-api.yaml  test.txt  test_async.py  test_requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.github/workflows/: anchore-analysis.yml  black.yml  ci-tests.yml  docker-publish.yml  image-scan.yml  pypi-publish.yml  python-ci.yml
ce/: __init__.py  views.py  wsgi.py
ce/api/: __init__.py  data.py  geo.py  geospatial.py  grid.py  health.py  lister.py  metadata.py  models.py  multimeta.py  multistation.py  multistats.py  percentileanomaly.py  stats.py  timeseries.py  util.py
ce/api/csv/: region-csvs.md  vancouver_island.csv
ce/api/health/: region.py  regions.py
ce/api/routed_streamflow/: README.md  __init__.py  health.py  hydromodel_output.py  hydromodel_output_list.py  hydromodel_output_metadata.py  result_annual_cycle.py  result_annual_series.py  result_list.py  result_metadata.py  result_timeseries.py  streamflow_helpers.py
ce/api/streamflow/: downstream.py  flowseries.py  multistation.py  shared.py  watershed.py  watershed_streams.py
ce/api/streamflow/routing-data/: ColumbiaRouting.nc
ce/geo_data_grid_2d/: __init__.py
ce/geo_data_grid_2d/vic/: __init__.py
ce/rule_resolver/: .coveragerc  README.md  planners-impacts.csv  requirements.txt
ce/rule_resolver/scripts/: evaluator.py  main.py  resolver.py
ce/rule_resolver/tests/: planners-impacts-sm.csv  planners-impacts-test.csv  test_data.json  test_evaluator.py  test_resolver.py
ce/tests/: conftest.py  test_api.py  test_db.py  test_geo.py  test_util.py
ce/tests/api/: test_api_misc.py  test_data.py  test_geospatial.py  test_grid.py  test_health.py  test_lister.py  test_metadata.py  test_models.py  test_multimeta.py  test_multistats.py  test_percentileanomaly.py  test_regions.py  test_stats.py  test_timeseries.py
ce/tests/api/downstream/: test_build_downstream_watershed.py  test_downstream_watershed.py
ce/tests/api/streamflow/: test_watershed.py
ce/tests/data/: CanESM2-rcp85-tasmax-r1i1p1-2010-2039.nc  anuspline_na.nc  cgcm-tmin.nc  cgcm.nc  flow-direction_peace.nc  pr_aClim_BNU-ESM_historical_r1i1p1_19650101-19701230.nc  prism_pr_small.nc  tasmax_aClim_BNU-ESM_historical_r1i1p1_19650101-19701230.nc  tasmax_mClim_BNU-ESM_historical_r1i1p1_19650101-19701230.nc  tasmax_sClim_BNU-ESM_historical_r1i1p1_19650101-19701230.nc  tasmin_mClim_BNU-ESM_historical_r1i1p1_19650101-19701230.nc  tasmin_sClim_BNU-ESM_historical_r1i1p1_19650101-19701230.nc  test.sqlite
ce/tests/data/regions/: bc.csv  extra_data.csv  missing_data.csv
ce/tests/geo_data_grid_2d/: conftest.py  test_base.py
ce/tests/geo_data_grid_2d/vic/: conftest.py  test_vic.py
ce/tests/helpers/: test_utils.py
data_prep/: ClimateFile.py  Cmip5File.py  ProductFile.py  README.md  generate_annual_averages.py  generate_climos.py  requirements.txt  setup.py  util.py  write_time_dimension.py
data_prep/dp/: generate_climos.py
data_prep/tests/: conftest.py  test_create_climo_files.py
doc/source/: conf.py  index.rst  overview.md  workflow.md
doc/source/api/: api-index.rst  api-overview.md  data-api-usage.md  data-api.rst  downstream-api-usage.md  downstream-api.rst  grid-api-usage.md  grid-api.rst  health-api-usage.md  health-api.rst  lister-api-usage.md  lister-api.rst  metadata-api-usage.md  metadata-api.rst  models-api-usage.md  models-api.rst  multimeta-api-usage.md  multimeta-api.rst  multistats-api-usage.md  multistats-api.rst  p2a-regions.md  percentileanomaly-api-usage.md  percentileanomaly-api.rst  region-api-usage.md  region-api.rst  regions-api-usage.md  regions-api.rst  rest-item.md  sesh-not-needed.md  stats-api-usage.md  stats-api.rst  timeseries-api-usage.md  timeseries-api.rst  watershed-api-usage.md  watershed-api.rst  watershed-streams-api-usage.md  watershed-streams-api.rst
docker/: Dockerfile.dev  Dockerfile.prod  entrypoint-dev.sh  entrypoint-prod.sh  gunicorn.conf  logging.conf  secrets.sh
dp/: argparse_helpers.py  fix-downscale-metadata.sh  fix-downscale-metadata.yaml  generate_climos.py  process-climo-means.sh  qsub-climo.sh  qsub-climos-from-file.sh  requirements.txt  script_helpers.py  split_merged_climos.py  todo-downscaled  units_helpers.py  update_metadata.py
dp/data/: tiny_downscaled_pr.nc
dp/jobqueueing/: alembic.ini  argparse_helpers.py  gcadd.py  gcalter-params.py  gclist.py  gcreset.py  gcsub.py  gcupd-email.py  gcupd-params.py  gcupd-qstat.py  jobqueueing.sqlite  jobqueueing_db.py
dp/jobqueueing/alembic/: env.py
dp/jobqueueing/alembic/versions/: c4d37392bf0c_add_table_generate_climos_queue.py  ef8e554efc91_add_column_py_venv.py
dp/jobqueueing/tests/: test_gcsub.py
dp/tests/: conftest.py  test_create_climo_files.py  test_split_merged_climos.py  test_units_helpers.py
dp/tests/data/: tiny_downscaled_pr.nc  tiny_downscaled_pr_packed.nc  tiny_downscaled_tasmax.nc  tiny_downscaled_tasmax_climos.nc  tiny_gcm_360_climos.nc  tiny_gcm_360_day_cal.nc  tiny_gcm_climos.nc  tiny_hydromodel_gcm_climos.nc
scripts/: devserver.py
swagger/: rsf-api.yaml
(+13 files in other folders)
