[tool.poetry]
name = "ce"
version = "3.6.4"
description = "PCIC's Climate Explorer (CE)"
authors = [
   "Rod Glover <rglover@uvic.ca>",
   "James Hiebert <hiebert@uvic.ca>",
   "Nik Rados",
   "Lee Zeman <lzeman@uvic.ca>",
   "Jonathan Helfrich",
   "Ada Sungar",
   "Cairo Sanders",
   "Quintin Sparks <quintins@uvic.ca>",
   "Basil Veerman",
   "Eric Yvorchuk <eyvorchuk@uvic.ca"
]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Flask = "<3.0.0"
Flask-SQLAlchemy = "<3.0.0" # minimum supported version of SQLAlchemy is 1.4.54
Flask-Cors = "*"
shapely = ">2.0,<3"
numpy = "<2"
GDAL = ">=3.3.0,<3.4"
rasterio = "~=1.3"
SQLAlchemy = "<2"
contexttimer = "^0.3.3"
Pint = "<1"
gunicorn = "=23.0.0"
nchelpers = {version = "^5.5.11", source = "pcic"}
modelmeta = {version = "^1.0.1", source = "pcic"}
cf-cell-methods = {version = "^0.1.0", source = "pcic"}
requests = ">=2.32,<3"

[tool.poetry.group.dev.dependencies]
pytest = ">=3.0.0"
python-dateutil = "^2.8.2"
black = "^23.11.0"
pre-commit = "^3.5.0"


[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "online: marks tests that use an online resource (deselect with '-m \"not online\"')",
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
]
norecursedirs = ".git site-packages _build *.egg ce/tests/helpers"
